Add message by author

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost:6556/postgres
 spring.datasource.username=postgres
 spring.datasource.password=a1c0dev
 spring.jpa.generate-ddl=true
-
 spring.mustache.expose-request-attributes=true
+debug=true
